# Sentinel

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6qy3djy7ki2gdbk9jbgl0w63lxdmdqir-source  kx5lli7g0rdld4n2rmppvz437hwd9vmx-source  r9fk8sla8gwxxbkswcp6zq4bk143b760-source
sample_attacks/dependency_injection/: Cargo.toml
sample_attacks/dependency_injection/src/: main.rs
sample_attacks/fileless/: Cargo.toml
sample_attacks/malware_simulator/: Cargo.toml
sample_attacks/malware_simulator/src/: main.rs
sentinel/: Cargo.toml
sentinel-common/: Cargo.toml
sentinel-common/src/: lib.rs
sentinel-ebpf/src/: macros.rs  main.rs  maps.rs  vmlinux.rs
sentinel-ebpf/src/probes/: io.rs  memfd.rs  memory.rs  mod.rs  process.rs  socket.rs
sentinel/src/: bus.rs  core.rs  main.rs  utils.rs
sentinel/src/detectors/: fileless.rs  mod.rs  reflective.rs  reverse_shell.rs
